--- a/src/main/resources/templates/allRecipies.html
+++ b/src/main/resources/templates/allRecipies.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-auto my-1">
             <select class="custom-select mr-sm-2" id="inlineFormCustomSelect2" name="likes">
-                <option value="0" >Likes > 0</option>
+                <option value="-1" >Likes >= 0</option>
                 <option value="10">Likes > 10</option>
                 <option value="50">Likes > 50</option>
                 <option value="80">Likes > 80</option>
