--- a/src/main/resources/templates/dodaj.html
+++ b/src/main/resources/templates/dodaj.html
@@ -15,6 +15,7 @@
     <form th:object="${recipe}" th:action="@{/edytujPrzepis}" method="post">
 
         <input type="hidden" th:field="*{id}"/>
+        <input type="hidden" th:field="*{likes}"/>
 
         <div class="form-group">
             <label for="name">nazwa przepisu</label>
